Update package.json to include additional keywords and add GitHub Actions workflow for npm publishing

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "valcss": "./valcss.js"
   },
   "keywords": [
+    "valcss",
     "css",
-    "atomic",
     "arbitrary",
-    "inline"
+    "inline",
+    "utility",
+    "utility-first"
   ],
   "author": "Hardik Desai",
   "license": "MIT",
