--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   },
   "devDependencies": {
     "chokidar": "^4.0.3"
-  }
+  },
+  "badges": [
+    {
+      "url": "https://img.shields.io/npm/v/valcss",
+      "alt": "npm version"
+    }
+  ]
 }
