Update package.json to add 'utility-classes' keyword for improved package discoverability.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "arbitrary",
     "inline",
     "utility",
-    "utility-first"
+    "utility-first",
+    "utility-classes"
   ],
   "author": "Hardik Desai",
   "license": "MIT",
