--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "valcss",
   "version": "1.0.0",
   "description": "Tiny utility to generate CSS",
-  "main": "index.js",
+  "main": "valcss.js",
   "bin": {
     "valcss": "./valcss.js"
   },
@@ -24,10 +24,12 @@
   "devDependencies": {
     "chokidar": "^4.0.3"
   },
-  "badges": [
-    {
-      "url": "https://img.shields.io/npm/v/valcss",
-      "alt": "npm version"
-    }
-  ]
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hardik-143/valcss.git"
+  },
+  "homepage": "https://github.com/hardik-143/valcss#readme",
+  "bugs": {
+    "url": "https://github.com/hardik-143/valcss/issues"
+  }
 }
